--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
 			<artifactId>shiro-spring</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>apache-cxf</artifactId>
+			<version>3.2.6</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
